remove logging infor

--- a/README
+++ b/README
@@ -12,3 +12,7 @@ gradle installDebug
 gradle uninstallAll
 
 if you upgrade libgdx, you have to update native files in jniLibs as-well
+
+To convert fbx files
+export LD_LIBRARY_PATH=/tmp
+./fbx-conv-lin64 -f -v -o [G3db|G3dj] [FBX_FILE_PATH]
